Renamed csv, added another day of test data

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ tomorrow.setDate(tomorrow.getDate()+1);
 // =============================================
 // Reading Data
 // =============================================
-d3.csv("readme-flights.csv", function(error, data) {
+d3.csv("masterchime.csv", function(error, data) {
   if (error) throw error;
 
   data.forEach(function(d) {
