Removed graph outline, changed gradient color...
... so it would look better when zoomed out

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@ svg {
 
 path.line {
   fill: none;
-  stroke: #000;
   stroke-width: .5px;
 }
 
@@ -111,7 +110,7 @@ var gradient = svg.append("defs").append("linearGradient")
 
 gradient.append("stop")
     .attr("offset", "0%")
-    .attr("stop-color", "#fff")
+    .attr("stop-color", "#e5e9ef")
     .attr("stop-opacity", .5);
 
 gradient.append("stop")
