Changed gradient color again

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ var gradient = svg.append("defs").append("linearGradient")
 
 gradient.append("stop")
     .attr("offset", "0%")
-    .attr("stop-color", "#e5e9ef")
+    .attr("stop-color", "#ccd3e0")
     .attr("stop-opacity", .5);
 
 gradient.append("stop")
